# sakshi

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH_REVIEW.md  LICENSE  LICENSE-DATA  Makefile  README.md  SECURITY.md  TAKEDOWN.md  pyproject.toml  sources.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  data-correction.yml  feature.yml  source-suggestion.yml
.github/workflows/: ci.yml  deploy.yml  scrape.yml
data/: README.md  index.json  recent.json  summary.json
data/2018/: DL.json
data/2026/: DL.json  HR.json  TG.json  TS.json  UP.json  XX.json
data/_meta/: processed.json
data/_needs_review/: approved.json  queue.json
pipeline/: __init__.py  __main__.py  config.py  dedupe.py  fixtures.py  gates.py  identity_scan.py  ledger.py  pii_constants.py  provenance.py  sanitize.py  severity.py  shard.py  states.py  validate.py  verify.py
pipeline/extract/: __init__.py  gemini.py
pipeline/sources/: __init__.py  base.py  ecourts.py  http.py  indiankanoon.py  registry.py  rss_media.py
pipeline/tests/: __init__.py  test_config.py  test_dedupe.py  test_gates.py  test_gemini.py  test_http.py  test_identity_scan.py  test_indiankanoon.py  test_ledger.py  test_orchestrator.py  test_pii_guard.py  test_provenance.py  test_registry.py  test_sanitize.py  test_severity.py  test_shard.py  test_smoke.py  test_sources.py  test_states.py  test_validate.py  test_verify.py
schemas/: case.schema.json  extraction.schema.json  ledger.schema.json
scripts/: __init__.py  gen_dev_data.py  pii_guard.py
site/: eslint.config.js  index.html  lighthouserc.json  package-lock.json  package.json  vite.config.js
site/public/: CNAME  manifest.webmanifest  sw.js
site/src/: animations.js  charts.js  data.js  dom.js  filters.js  format.js  main.js  router.js  severity.js  severity_rules.json  state.js
site/src/i18n/: en.json  hi.json  index.js
site/src/views/: caseDetail.js  explore.js  landing.js  parts.js  scorecards.js
site/styles/: main.css
