[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sakshi-pipeline"
version = "0.1.0"
description = "Sakshi — data pipeline for an open, static public-accountability record of publicly reported sexual-assault cases across India."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sakshi contributors" }]
keywords = ["civic-tech", "india", "open-data", "accountability", "github-pages"]

# Runtime dependencies for the fetch -> extract -> sanitize -> dedupe -> shard pipeline.
dependencies = [
    "httpx>=0.27",            # async HTTP with per-host politeness
    "google-generativeai>=0.8",  # Gemini extraction (response_schema-constrained JSON)
    "rapidfuzz>=3.9",         # fuzzy dedup on district/date/sections/court
    "jsonschema>=4.22",       # draft-2020-12 record validation
    "python-dotenv>=1.0",     # load GEMINI_API_KEY from .env (never committed)
    # NER for the sanitize.py PII gate is OPTIONAL and pluggable. The regex gate is
    # always on; for named-entity stripping install one of the following extras:
    #   spaCy         -> pip install "spacy>=3.7" && python -m spacy download en_core_web_sm
    #   Presidio      -> pip install "presidio-analyzer>=2.2"
    # Kept out of the hard dependency set so CI stays fast and offline-friendly.
]

[project.optional-dependencies]
ner = [
    "presidio-analyzer>=2.2",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/sakshi-project/sakshi"
Repository = "https://github.com/sakshi-project/sakshi"

[tool.setuptools.packages.find]
include = ["pipeline*"]

# ---------------------------------------------------------------------------
# Ruff — lint + import sorting. Boring, readable code over cleverness.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["pipeline", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"pipeline/tests/*" = ["S101"]  # asserts are expected in tests

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy — strict. The whole pipeline is fully typed.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true
files = ["pipeline", "scripts"]

# Third-party libraries without shipped type stubs.
[[tool.mypy.overrides]]
module = [
    "google.generativeai.*",
    "rapidfuzz.*",
    "presidio_analyzer.*",
    "jsonschema.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest + coverage.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["pipeline/tests"]
# Coverage flags are passed explicitly by `make check` / ci.yml so the targeted
# 100% PII run is not polluted by the package-wide default. Bare `pytest` runs
# without coverage.
addopts = "--strict-markers"
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["pipeline"]
# Omit tests and the data-acquisition modules that are still documented stubs
# (fetch/extract/dedupe/shard). They join the coverage gate as they are
# implemented in the pipeline phase; the safety + validation layer is covered now.
omit = [
    "pipeline/tests/*",
    "pipeline/__main__.py",
    "pipeline/dedupe.py",
    "pipeline/shard.py",
    "pipeline/extract/*",
    "pipeline/sources/ecourts.py",
    "pipeline/sources/rss_media.py",
]

[tool.coverage.report]
show_missing = true
# Overall pipeline gate. sanitize.py and pii_guard.py are held to 100% branch
# coverage separately in the Makefile `check` target (they are the last PII gates).
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
